--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,8 @@
 version: 2.1
 
-executors:
-  android-executor:
-    docker:
-      - image: cimg/android:2022.09
-    environment:
-      JVM_OPTS: -Xmx3200m
-      CIRCLE_JDK_VERSION: openjdk21
+# Import the Android orb
+orbs:
+  android: circleci/android@2.2.0
 
 workflows:
   version: 2
@@ -22,124 +18,64 @@ workflows:
 
 jobs:
   build_test:
+    docker:
+      - image: cimg/android:2022.09
     working_directory: ~/code
-    executor: android-executor
     steps:
       - checkout
 
-      - run:
-          name: Install JDK 21
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y openjdk-21-jdk
-            sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-21-openjdk-amd64/bin/java 1
-            sudo update-alternatives --set java /usr/lib/jvm/java-21-openjdk-amd64/bin/java
-            export JAVA_HOME="/usr/lib/jvm/java-21-openjdk-amd64"
-            java -version
+      # Use the Android orb to set up the SDK
+      - android/setup:
+          sdk-version: "34"
+          build-tools-version: "34.0.0"
+          target: "android-30"
+          # You can add more options for system images or platform tools if needed
 
-      - run:
-          name: Set JAVA_HOME
-          command: echo 'export JAVA_HOME=/usr/lib/jvm/java-21-openjdk-amd64' >> $BASH_ENV
-
-      - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-
-      - run:
-          name: Download Dependencies
-          command: ./gradlew androidDependencies
-
-      - save_cache:
-          paths:
-            - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-
+      # Run unit tests (lint and unit tests)
       - run:
           name: Run Unit tests
           command: ./gradlew lint test
 
-      - run:
-          name: Install SDK tools and accept licenses
-          command: |
-            export ANDROID_SDK_ROOT=$ANDROID_HOME
-            export PATH=$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH
+      # Start the emulator
+      - android/start-emulator:
+          api-level: 30
+          force-avd-creation: true
+          emulator-options: "-no-window -gpu swiftshader_indirect -accel off"
 
-            # Install Java 11 for sdkmanager compatibility
-            sudo apt-get update
-            sudo apt-get install -y openjdk-11-jdk
-            export JAVA_HOME="/usr/lib/jvm/java-11-openjdk-amd64"
-            export PATH=$JAVA_HOME/bin:$PATH
-            java -version
-
-            # Accept all SDK licenses
-            yes | sdkmanager --licenses
-
-            # Install system image for emulator
-            sdkmanager "system-images;android-30;google_apis;x86_64"
-
-            # Create AVD
-            echo "no" | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --device "pixel"
-
-      - run:
-          name: Start Emulator
-          command: |
-            export ANDROID_SDK_ROOT=$ANDROID_HOME
-            nohup emulator -avd test -no-audio -no-window -no-boot-anim -gpu swiftshader_indirect -accel off &
-            echo "Waiting for emulator to boot..."
-            adb wait-for-device
-            adb shell getprop sys.boot_completed | grep -m 1 '1'
-
-            # Optional: Disable animations
-            adb shell settings put global window_animation_scale 0
-            adb shell settings put global transition_animation_scale 0
-            adb shell settings put global animator_duration_scale 0
-
-      - run:
-          name: Switch back to Java 21 for Gradle
-          command: |
-            sudo update-alternatives --set java /usr/lib/jvm/java-21-openjdk-amd64/bin/java
-            export JAVA_HOME="/usr/lib/jvm/java-21-openjdk-amd64"
-            java -version
-
+      # Run Instrumented Tests on the Emulator
       - run:
           name: Run Instrumented Tests
           command: ./gradlew connectedAndroidTest
 
+      # Store test results and lint reports
+      - store_test_results:
+          path: app/build/test-results/testDebugUnitTest
       - store_artifacts:
           path: app/build/reports/lint-results-debug.html
           destination: app_lint_report
-
       - store_test_results:
-          path: app/build/test-results/testDebugUnitTest
-
+          path: core/build/test-results/testDebugUnitTest
       - store_artifacts:
           path: core/build/reports/lint-results-debug.html
           destination: core_lint_report
-
       - store_test_results:
-          path: core/build/test-results/testDebugUnitTest
-
+          path: shared/build/test-results/testDebugUnitTest
       - store_artifacts:
           path: shared/build/reports/lint-results-debug.html
           destination: shared_lint_report
-
-      - store_test_results:
-          path: shared/build/test-results/testDebugUnitTest
-
       - store_test_results:
           path: shared/build/outputs/androidTest-results/connected/debug
-
       - store_artifacts:
           path: widget/build/reports/lint-results-debug.html
           destination: widget_lint_report
-
       - store_test_results:
           path: widget/build/test-results/testDebugUnitTest
 
   deploy:
-    executor: android-executor
+    docker:
+      - image: cimg/android:2022.09
     steps:
       - checkout
-
       - run:
           name: Install JDK 21
           command: |
@@ -149,22 +85,17 @@ jobs:
             sudo update-alternatives --set java /usr/lib/jvm/java-21-openjdk-amd64/bin/java
             export JAVA_HOME="/usr/lib/jvm/java-21-openjdk-amd64"
             java -version
-
       - run:
           name: Set JAVA_HOME
           command: echo 'export JAVA_HOME=/usr/lib/jvm/java-21-openjdk-amd64' >> $BASH_ENV
-
       - run: echo $ENCODED_KEYSTORE | base64 --decode >> ${HOME}/keystore.jks
       - run: echo 'export KEYSTORE=${HOME}/keystore.jks' >> $BASH_ENV
-
       - run:
-          name: Build Release
+          name: Build Release APK
           command: ./gradlew clean assembleRelease --no-daemon --stacktrace
-
       - store_artifacts:
           path: app/build/outputs/apk/release
           destination: distribution
-
       - store_artifacts:
           path: app/build/outputs/mapping
           destination: distribution
