--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,4 +146,10 @@ dependencies {
     testImplementation 'junit:junit:4.13'
 
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
+
+    androidTestImplementation "androidx.test:runner:1.5.2"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    // For GrantPermissionRule
+    androidTestImplementation "androidx.test:rules:1.3.0"
 }
