--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,7 +96,7 @@ dependencies {
     implementation project(':shared')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation(libs.appcompat)
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.12.0'
 
@@ -108,8 +108,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
 
     // Koin
-    implementation 'io.insert-koin:koin-core:3.0.1'
-    implementation 'io.insert-koin:koin-android:3.0.1'
+    implementation(libs.koin)
 
     // Gson
     implementation 'com.google.code.gson:gson:2.10.1'
@@ -143,7 +142,7 @@ dependencies {
     // Mockito (final classes)
     testImplementation 'org.mockito:mockito-inline:4.5.1'
 
-    testImplementation 'junit:junit:4.13'
+    testImplementation(libs.junit)
 
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
