--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,7 +17,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation(libs.appcompat)
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
@@ -25,8 +25,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
 
     // Koin
-    implementation 'io.insert-koin:koin-core:3.0.1'
-    implementation 'io.insert-koin:koin-android:3.0.1'
+    implementation(libs.koin)
 
     // Mockito
     testImplementation 'org.mockito:mockito-core:5.0.0'
@@ -49,5 +48,5 @@ dependencies {
     // Roboelectric (necessary to provide a mock Android environment for the database)
     testImplementation 'org.robolectric:robolectric:4.10.3'
 
-    testImplementation 'junit:junit:4.13'
+    testImplementation(libs.junit)
 }
