--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation project(':core')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation(libs.appcompat)
     implementation 'com.google.android.material:material:1.12.0'
 
     // ApplicationProvider.getApplicationContext()
@@ -34,7 +34,7 @@ dependencies {
     // Roboelectric (necessary to provide a mock Android environment for the preferences)
     testImplementation 'org.robolectric:robolectric:4.10.3'
 
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation(libs.junit)
 
     androidTestImplementation "androidx.test:runner:1.5.2"
 }
