--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -24,17 +24,16 @@ dependencies {
     implementation project(':shared')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation(libs.appcompat)
     implementation 'com.google.android.material:material:1.12.0'
 
     // Koin
-    implementation 'io.insert-koin:koin-core:3.0.1'
-    implementation 'io.insert-koin:koin-android:3.0.1'
+    implementation(libs.koin)
 
     // ApplicationProvider.getApplicationContext()
     implementation 'androidx.test:core-ktx:1.6.1'
     // Roboelectric (necessary to provide a mock Android environment for the preferences)
     testImplementation 'org.robolectric:robolectric:4.10.3'
 
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation(libs.junit)
 }
