--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,9 +138,7 @@ dependencies {
     implementation "com.android.tools:desugar_jdk_libs:2.0.4"
 
     // Mockito
-    testImplementation 'org.mockito:mockito-core:4.5.1'
-    // Mockito (final classes)
-    testImplementation 'org.mockito:mockito-inline:4.5.1'
+    testImplementation(libs.mockito)
 
     testImplementation(libs.junit)
 
