--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,11 @@
 [versions]
 koin = "3.0.1"
-junit = "4.13"
+junit = "4.13.2"
 appcompat = "1.7.0"
+mockito = "5.0.0"
 
 [libraries]
 koin = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 junit = { module = "junit:junit", version.ref = "junit" }
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
+mockito = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito" }
