Add material and test core libs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,7 +98,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation(libs.appcompat)
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.material:material:1.12.0'
+    implementation(libs.material)
 
     // ViewModel
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -144,7 +144,7 @@ dependencies {
 
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
-    androidTestImplementation "androidx.test:runner:1.5.2"
+    androidTestImplementation(libs.test.runner)
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     // For GrantPermissionRule
