--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -26,15 +26,16 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation(libs.appcompat)
-    implementation 'com.google.android.material:material:1.12.0'
+    implementation(libs.material)
 
-    // ApplicationProvider.getApplicationContext()
-    implementation 'androidx.test:core-ktx:1.6.1'
-    implementation 'androidx.test.ext:junit-ktx:1.2.1'
-    // Roboelectric (necessary to provide a mock Android environment for the preferences)
-    testImplementation 'org.robolectric:robolectric:4.10.3'
+    // Core Android testing APIs (ApplicationProvider.getApplicationContext(), ActivityScenario...)
+    testImplementation(libs.test.core)
+    // JUnit-specific helpers for Android tests (test rules...)
+    testImplementation 'androidx.test.ext:junit-ktx:1.2.1'
+    // Provides a mock Android environment for the preferences)
+    testImplementation(libs.roboelectric)
 
     testImplementation(libs.junit)
 
-    androidTestImplementation "androidx.test:runner:1.5.2"
+    androidTestImplementation(libs.test.runner)
 }
