--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -25,15 +25,15 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation(libs.appcompat)
-    implementation 'com.google.android.material:material:1.12.0'
+    implementation(libs.material)
 
     // Koin
     implementation(libs.koin)
 
-    // ApplicationProvider.getApplicationContext()
-    implementation 'androidx.test:core-ktx:1.6.1'
-    // Roboelectric (necessary to provide a mock Android environment for the preferences)
-    testImplementation 'org.robolectric:robolectric:4.10.3'
+    // Core Android testing APIs (ApplicationProvider.getApplicationContext(), ActivityScenario...)
+    testImplementation(libs.test.core)
+    // Provide a mock Android environment for the preferences
+    testImplementation(libs.roboelectric)
 
     testImplementation(libs.junit)
 }
